lab04 near finish